# CreatorEngine

./: .gitignore  README.md  rttr_core_d.lib
Creator0.10/: LOG.txt
Creator0.10/Source/: CMakeLists.txt
Creator0.10/Source/Editor/: MyGLWindow.cpp  MyGLWindow.h  mian.cpp
Creator0.10/Source/Runtime/: CrCamera.cpp  CrCamera.h  CrCanvas.h  CrComponent.cpp  CrConfig.h  CrCubemap.cpp  CrCubemap.h  CrDefine.h  CrEngine.cpp  CrEngine.h  CrEngineInterface.cpp  CrEngineInterface.h  CrEngineInterfaceLua.cpp  CrEngineInterfaceLua.h  CrEvent.cpp  CrEvent.h  CrGameObject.cpp  CrGameObject.h  CrLight.cpp  CrLight.h  CrMain.cpp  CrMemoryPool.cpp  CrMemoryPool.h  CrMeshPool.cpp  CrMeshPool.h  CrMeshUtility.cpp  CrMeshUtility.h  CrObject.cpp  CrObject.h  CrRender.h  CrScene.cpp  CrScene.h  CrShader.cpp  CrShader.h  CrShaderUtility.cpp  CrShaderUtility.h  CrTexture.cpp  CrTexture.h  CrTexturePool.cpp  CrTexturePool.h  (+10 more)
Creator0.10/Source/Runtime/Common/: CrFontLab.cpp  CrFontLab.h
Creator0.10/Source/Runtime/Component/: CrComponent.h  CrMaterial.cpp  CrMaterial.h  CrMesh.cpp  CrMesh.h  CrMeshRender.cpp  CrMeshRender.h  CrSkinMeshRender.cpp  CrSkinMeshRender.h  CrSkybox.cpp  CrSkybox.h  CrTransform.cpp  CrTransform.h
Creator0.10/Source/Runtime/Core/: CrGameObject.cpp  CrObject.cpp  CrObject.h  CrScene.h
Creator0.10/Source/Runtime/Core/Private/: CrComponent.cpp  CrGameObject.cpp  CrMaterial.cpp  CrMesh.cpp  CrMeshRender.cpp  CrObject.cpp  CrScene.cpp  CrTransform.cpp  Event.cpp
Creator0.10/Source/Runtime/Core/Public/: Core.h  CrComponent.h  CrGameObject.h  CrMaterial.h  CrMesh.h  CrMeshRender.h  CrObject.h  CrScene.h  CrTransform.h  Event.h
Creator0.10/Source/Runtime/Lua/: CrLuaState.h
Creator0.10/Source/Runtime/Render/: CrRender.h
Creator0.10/Source/Runtime/UI/: UICanvas.cpp  UICanvas.h  UISprite.cpp  UISprite.h  UIWidget.cpp  UIWidget.h
(+156 files in other folders)
